added dev and prod environments

--- a/src/server/views/index.ejs
+++ b/src/server/views/index.ejs
@@ -1,10 +1,21 @@
+<%#
+	During development, the Webpack middleware 
+	stores static files (in memory) at /public
+%>
+<% var stylesheet = '', script = ''; %>
+<% if(env === 'development'){ %>
+	<% stylesheet = '/public/css/bundle.css'; script = '/public/js/bundle.js'; %>
+ <% } else{ %>  
+	<% stylesheet = '/css/bundle.min.css'; script = '/js/bundle.min.js'; %>
+<% } %>
+
 <!DOCTYPE html>
 	<html lang="en-US"> 
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title><%= title %></title>
-		<link rel="stylesheet" href="./public/css/bundle.css">
+		<link rel="stylesheet" href="<%= stylesheet %>">
 	</head>
 	<body> 
 		<div id="app"><%- html %></div>
@@ -12,5 +23,5 @@
 	<script>
 		window.__INITIAL_STATE__ = <%- state %>;
 	</script>
-	<script src="./public/js/bundle.js"></script>
+	<script src="<%= script %>"></script>
 </html>
